Generic BoardPage layout fixed, till satisfaction. not in use yet